; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/message/i2o/extr_i2o_scsi.c_i2o_scsi_notify_device_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/message/i2o/extr_i2o_scsi.c_i2o_scsi_notify_device_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2o_device = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.i2o_device*)* @i2o_scsi_notify_device_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i2o_scsi_notify_device_remove(%struct.i2o_device* %0) #0 {
  %2 = alloca %struct.i2o_device*, align 8
  store %struct.i2o_device* %0, %struct.i2o_device** %2, align 8
  %3 = load %struct.i2o_device*, %struct.i2o_device** %2, align 8
  %4 = getelementptr inbounds %struct.i2o_device, %struct.i2o_device* %3, i32 0, i32 1
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %11 [
    i32 129, label %7
    i32 128, label %7
  ]

7:                                                ; preds = %1, %1
  %8 = load %struct.i2o_device*, %struct.i2o_device** %2, align 8
  %9 = getelementptr inbounds %struct.i2o_device, %struct.i2o_device* %8, i32 0, i32 0
  %10 = call i32 @i2o_scsi_remove(i32* %9)
  br label %12

11:                                               ; preds = %1
  br label %12

12:                                               ; preds = %11, %7
  ret void
}

declare dso_local i32 @i2o_scsi_remove(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
